# Triur_ai

./: .gitignore  PROJECT_SNAPSHOT.md  README.md  requirements.txt  start.bat
.github/workflows/: build.yml
app/: electron-builder.json  index.html  main.js  package.json  renderer.js  styles.css
app/src-tauri/: tauri.conf.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: main.rs
app/web/: index.html  renderer.js  styles.css
config/: personality.json  personality_david.json  personality_quinn.json  relationship.json  user_profile.json
src/: actions.py  brain.py  chat.py  emotions.py  gossip.py  memory.py  relationship.py  server.py  utils.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
