[package]
name = "triur-ai"
version = "0.1.0"
description = "Triur.ai — Three AI siblings who live on your desktop"
authors = ["Ashley Pickett"]
license = "MIT"
repository = "https://github.com/AMPickettDesign/Triur.ai"
edition = "2021"
rust-version = "1.70"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.8", features = ["shell-open", "window-all", "path-all"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
