[package]
name = "triur-ai"
version = "0.1.0"
description = "Triur.ai — Three AI siblings who live on your desktop"
authors = ["Ashley Pickett"]
license = "MIT"
repository = "https://github.com/AMPickettDesign/Triur.ai"
edition = "2021"
rust-version = "1.77.2"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
